[package]
name = "lcs-png-diff-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["binary"]
binary = ["all_image_formats"]
all_image_formats = ["image/png"]

[dependencies]
axum = "0.5.5"
axum-extra = { version = "0.3.1", features = ["spa"] }
clap = { version = "3.1.18", features = ["derive"] }
image = { version = "0.24.2", default-features = false }
lcs-png-diff = "0.1.0"
log = "0.4.17"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = "1.0.0"
